samples/_failures_safe/1761319098_e939c4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9a5f81ec.c: In function ‘main’:
./samples/SAFE/__tmp_9a5f81ec.c:140:16: error: missing terminating " character
  140 |         printf("Invalid level filter. Showing all entries
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_9a5f81ec.c:140:9: error: expected expression at end of input
  140 |         printf("Invalid level filter. Showing all entries
      |         ^~~~~~
./samples/SAFE/__tmp_9a5f81ec.c:140:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9a5f81ec.c:140:9: error: expected declaration or statement at end of input
